#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.65])
AC_INIT(helloworld, 0.9, dongyuchi@gmail.com)
AC_CONFIG_SRCDIR([helloworld.c])
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE(helloworld,0.9)

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile)
